Site seems to be finalized.

--- a/web/app/themes/sage/assets/manifest.json
+++ b/web/app/themes/sage/assets/manifest.json
@@ -4,6 +4,9 @@
       "files": [
         "scripts/main.js"
       ],
+      "vendor": [
+        "plugins/fancybox.js"
+      ],
       "main": true
     },
     "main.css": {
