--- a/config/.env.example
+++ b/config/.env.example
@@ -1,18 +1,18 @@
-[settings]
-WP_ENV      =
-DISABLE_WP_CRON =
-
-[site]
-WP_HOME     =
-
-[mysql]
-DB_NAME     = 
+DB_NAME     =
 DB_USER     =
 DB_PASSWORD =
-DB_HOST     =
-DB_CHARSET  =
-DB_COLLATE  =
-DB_PREFIX   =
+DB_HOST     = localhost
 
-[salts]
-; https://roots.io/salts.html
+WP_ENV      = development
+WP_HOME     =
+WP_SITEURL  = ${WP_HOME}/wp
+
+# Generate your keys here: https://roots.io/salts.html
+AUTH_KEY         = 'generateme'
+SECURE_AUTH_KEY  = 'generateme'
+LOGGED_IN_KEY    = 'generateme'
+NONCE_KEY        = 'generateme'
+AUTH_SALT        = 'generateme'
+SECURE_AUTH_SALT = 'generateme'
+LOGGED_IN_SALT   = 'generateme'
+NONCE_SALT       = 'generateme'
