--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,21 @@ language: ruby
 rvm:
   - 2.4.1
 
+before_install:
+  - nvm install node
+
+install:
+  - bundle install --path vendor
+  - npm install
+
 before_script:
  - chmod +x ./cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./cibuild
+script:
+  - npm run print
+  - ./cibuild
 
 # branch whitelist, only for GitHub Pages
 branches:
