New print script that doesn't use Browsersync

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "gulp": "gulp",
     "print": "gulp publish",
+    "print2": "gulp print",
     "deploy": "gulp deploy"
   },
   "dependencies": {
