--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
 script:
-  - npm run print
+  - npm run print2
   - ./cibuild
 
 # branch whitelist, only for GitHub Pages
