--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 install:
   - bundle install --path vendor
   - npm install
+  - npm install natives@1.1.16
 
 before_script:
  - chmod +x ./cibuild # or do this locally and commit
