/images/galleries -> /images/uploads

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
-  name: bitbucket
-  repo: design_by_thomas_azar/thomasazar.net # Path to your Bitbucket repository
-  branch: netlify-cms
-media_folder: "/images/uploads" # Media files will be stored in the repo under images/uploads
+  name: github
+  repo: thomasazar/thomasazar.net # Path to your Bitbucket repository
+  branch: hugo
+media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections:
   - name: "writings" # Used in routes, e.g., /admin/collections/blog
     label: "Writings" # Used in the UI
