--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: github
+  name: git-gateway
   repo: thomasazar/thomasazar.net # Path to your Bitbucket repository
   branch: hugo
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
