--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,10 +8,28 @@ collections:
   - name: "writings" # Used in routes, e.g., /admin/collections/blog
     label: "Writings" # Used in the UI
     label_singular: "Post"
-    folder: "writings" # The path to the folder where the documents are stored
+    folder: "content/writings" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Order", name: "weight", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "media" # Used in routes, e.g., /admin/collections/blog
+    label: "Media" # Used in the UI
+    label_singular: "Gallery"
+    folder: "content/media" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - label: Media
+        name: media
+        widget: list
+        fields:
+          - label: Caption
+            name: caption
+            widget: string
+          - label: File
+            name: file
+            widget: image
