--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,3 +33,6 @@ collections:
           - label: File
             name: file
             widget: image
+            config:
+              media_folder: "static/images/uploads/{{slug}}"
+              public_folder: "/images/uploads/{{slug}}"
