Root for defaults

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,8 +4,8 @@ backend:
   branch: hugo
 # Uploads defaults are not defined, which means they will need to be defined
 # in each "image" or "file" widget
-#media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-#public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "/" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/" # The src attribute for uploaded media will begin with /images/uploads
 collections:
   - name: "writings" # Used in routes, e.g., /admin/collections/blog
     label: "Writings" # Used in the UI
