Create thumbnails of uploads

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = "hugo --gc --minify && cd public/images/uploads && mkdir thumb && for i in *.jpg; do convert $i -resize 400x -quality 85 thumb/$i; done"
 
 [context.production.environment]
 HUGO_VERSION = "0.54.0"
