--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,15 +3,20 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: ubuntu
+image: jojomi/hugo
 
 pipelines:
   default:
     - step:
         script:
-          - apt update -y
-          - apt install -y snapd rsync ssh
-          - systemctl start snapd.service
-          - snap install --channel=extended hugo
-          - hugo --gc --minify
-          - rsync public/ $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+          - hugo --gc --minify          
+          - pipe: atlassian/scp-deploy:0.3.1
+            variables:
+              USER: '$DEPLOY_USER'
+              SERVER: '$DEPLOY_HOST'
+              REMOTE_PATH: '$DEPLOY_PATH'
+              LOCAL_PATH: './public/'
+              # SSH_KEY: '<string>' # Optional.
+              # EXTRA_ARGS: '<string>' # Optional.
+              # DEBUG: '<boolean>' # Optional.
+
