--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,14 +9,6 @@ pipelines:
   default:
     - step:
         script:
-          - hugo --gc --minify          
-          - pipe: atlassian/scp-deploy:0.3.1
-            variables:
-              USER: '$DEPLOY_USER'
-              SERVER: '$DEPLOY_HOST'
-              REMOTE_PATH: '$DEPLOY_PATH'
-              LOCAL_PATH: './public/'
-              # SSH_KEY: '<string>' # Optional.
-              # EXTRA_ARGS: '<string>' # Optional.
-              # DEBUG: '<boolean>' # Optional.
-
+          - apk add rsync
+          - hugo --gc --minify
+          - rsync -az ./public $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
