--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,35 @@
 backend:
-  name: git-gateway
-  repo: thomasazar/thomasazar.net # Path to your Bitbucket repository
-  branch: hugo
-media_folder: "static/images/uploads"
+  name: bitbucket
+  repo: thomas_azar/thomasazar.net # Path to your Bitbucket repository
+  branch: resources
+media_folder: "/assets/images/uploads"
 public_folder: "/images/uploads"
 collections:
+  - name: "news" # Used in routes, e.g., /admin/collections/blog
+    label: "News" # Used in the UI
+    label_singular: "News item"
+    folder: "content/news" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Order", name: "weight", widget: "number"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - label: "Footer information"
+        name: "footer"
+        widget: "object"
+        fields:
+          - {label: "Where", name: "where", widget: "string"}
+          - {label: "When", name: "when", widget: "string"}
+          - label: "Tickets"
+            name: "tickets"
+            widget: "object"
+            fields:
+              - {label: "Tickets Link", name: "link", widget: "string"}
+              - {label: "Tickets Text", name: "text", widget: "string"}
+              - {label: "Phone", name: "phone", widget: "string"}
+          - {label: "Director", name: "director", widget: "string"}
+          - {label: "Featuring", name: "featuring", widget: "string"}
   - name: "writings" # Used in routes, e.g., /admin/collections/blog
     label: "Writings" # Used in the UI
     label_singular: "Post"
@@ -23,41 +48,22 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
-      - label: Order
-        name: weight
-        widget: number
-      - label: Role
-        name: role
-        widget: string
-      - label: Director
-        name: director
-        widget: string
-      - label: Venue
-        name: venue
-        widget: string
-      - label: City
-        name: city
-        widget: string
-      - label: Photos by
-        name: photos_by
-        widget: string
-      - label: Featured image
-        name: featured
-        widget: image
+      - {label: Order, name: weight, widget: number}
+      - {label: "Role", name: role, widget: string}
+      - {label: Director, name: director, widget: string}
+      - {label: Venue, name: venue, widget: string}
+      - {label: City, name: city, widget: string}
+      - {label: "Photos by", name: photos_by, widget: string}
+      - {label: Featured image, name: featured, widget: image}
+      - {label: SVG logo, name: svg, widget: image}
       - label: Logo position
         name: logo
         widget: select
         options: ["north", "northwest", "northeast", "south", "southwest", "southeast", "center", "east", "west"]
       - label: Media
-        name: media
+        name: images
         widget: list
         fields:
-          - label: Caption
-            name: caption
-            widget: string
-          - label: File
-            name: file
-            widget: image
-          - label: Major?
-            name: major
-            widget: boolean
+          - {label: Caption, name: caption, widget: string}
+          - {label: File, name: file, widget: image}
+          - {label: Major?, name: major, widget: boolean}
