--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,15 +4,23 @@ backend:
 media_folder: "content/uploads"
 public_folder: "/uploads"
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
+  - name: "news" # Used in routes, e.g., /admin/collections/blog
+    label: "News" # Used in the UI
+    folder: "content/news" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Order", name: "weight", widget: "number"}
+      - {label: "Footer", name: "footer", widget: "object", fields:
+        - {label: "Where", name: "where", widget: "markdown"}
+        - {label: "When", name: "when", widget: "markdown"}
+        - {label: "Footer", name: "footer", widget: "object", fields:
+          - {label: "Link", name: "link", widget: "string"}
+          - {label: "Text", name: "text", widget: "string"}
+          - {label: "Phone", name: "phone", widget: "string"}
+          }
+        }
+        - {label: "Director", name: "director", widget: "string"}
+        - {label: "Featuring", name: "featuring", widget: "string"}
