--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,14 +13,18 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Order", name: "weight", widget: "number"}
-      - {label: "Footer", name: "footer", widget: "object", fields:
-        - {label: "Where", name: "where", widget: "markdown"}
-        - {label: "When", name: "when", widget: "markdown"}
-        - {label: "Footer", name: "footer", widget: "object", fields:
-          - {label: "Link", name: "link", widget: "string"}
-          - {label: "Text", name: "text", widget: "string"}
-          - {label: "Phone", name: "phone", widget: "string"}
-          }
-        }
+      - label: "Footer"
+        name: "footer"
+        widget: "object"
+        fields:
+          - {label: "Where", name: "where", widget: "markdown"}
+          - {label: "When", name: "when", widget: "markdown"}
+          - label: "Footer"
+            name: "footer"
+            widget: "object"
+            fields:
+              - {label: "Link", name: "link", widget: "string"}
+              - {label: "Text", name: "text", widget: "string"}
+              - {label: "Phone", name: "phone", widget: "string"}
         - {label: "Director", name: "director", widget: "string"}
         - {label: "Featuring", name: "featuring", widget: "string"}
