--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: production
+  branch: netlify-cms
 media_folder: "content/uploads"
 public_folder: "/uploads"
 collections:
