--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,15 @@ backend:
 media_folder: "content/uploads"
 public_folder: "/uploads"
 collections:
+  - name: "pages"
+    label: "Pages"
+    folder: "content"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Order", name: "weight", widget: "number"}
+      - {label: "Menu", name: "menu", widget: "hidden", default: "main"}
   - name: "news" # Used in routes, e.g., /admin/collections/blog
     label: "News" # Used in the UI
     folder: "content/news" # The path to the folder where the documents are stored
