Turn off previews, set URLs for site and logo

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,13 @@
 backend:
   name: git-gateway
   branch: netlify-cms
+publish_mode: editorial_workflow
+site_url: https://www.thomasazar.net
+logo_url: https://www.thomasazar.net/uploads/logo.svg
 media_folder: "content/uploads"
 public_folder: "/uploads"
+editor:
+  preview: false
 collections:
   - name: "pages"
     label: "Pages"
