Cloudinary URL, use YAML for front matter

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 baseURL: /
 languageCode: en-us
 title: Thomas Azar
+metaDataFormat: yaml
 frontmatter:
   date:
     - ":filename"
@@ -25,3 +26,4 @@ menu:
       weight: 30
 params:
   matomoid: 1
+  cloudinary_url: https://res.cloudinary.com/thomasazar/image/upload/
