--- a/.forestry/front_matter/templates/footer.yml
+++ b/.forestry/front_matter/templates/footer.yml
@@ -1,4 +1,39 @@
 ---
 label: Footer
 hide_body: true
-fields: []
+fields:
+- name: title
+  type: text
+  config:
+    required: false
+  label: Title
+- name: director
+  type: text
+  config:
+    required: false
+  label: Director
+- name: where
+  type: text
+  config:
+    required: false
+  label: Where
+- name: when
+  type: text
+  config:
+    required: false
+  label: When
+- name: link
+  type: text
+  config:
+    required: false
+  label: Link
+- name: text
+  type: text
+  config:
+    required: false
+  label: Text
+- name: phone
+  type: text
+  config:
+    required: false
+  label: phone
