--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,10 @@
 baseURL: /
 languageCode: en-us
 title: Thomas Azar
-metaDataFormat: yaml
-frontmatter:
-  date:
-    - ":filename"
-    - ":default"
+
 params:
-  matomoid: 1
   images_prefix: https://res.cloudinary.com/thomasazar/image/upload
   images_directory: thomasazar.net
+disableKinds:
+- taxonomy
+- term
