--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,7 +24,12 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --environment build
+        env:
+          HUGO_API_AUTH_URL: ${{ secrets.HUGO_API_AUTH_URL }}
+          HUGO_GQL_API_URL: ${{ secrets.HUGO_GQL_API_URL }}
+          HUGO_API_GQL_USER: ${{ secrets.HUGO_API_GQL_USER }}
+          HUGO_API_GQL_PASSWORD: ${{ secrets.HUGO_API_GQL_PASSWORD }}
+        run: hugo --environment build 
 
       - name: Commit files
         run: |
